<resources>
    <string name="app_name">My notes</string>
    <string name="action_settings">Settings</string>
    <string name="et_hint_categoryName">Enter the name of the category</string>
    <string name="btn_categoryIcon">Select the icon for the category</string>
    <string name="et_hint_note">Your note</string>
    <string name="edit">Edit category</string>
    <string name="sort">Sort category</string>
    <string name="delete">Delete category</string>
    <string name="unsorted">Unsorted category</string>
    <string name="dialog_title_createCategory">Create new category</string>
    <string name="dialog_title_updateCategory">Update your category</string>
    <string name="dialog_title_createNote">Create new note</string>
    <string name="dialog_title_updateDeleteNote">Delete or update your note</string>
    <string name="btn_createNoteDialog" />
    <string name="btn_ok">OK</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="tv_emptyCategoryList">There is no category to form your notes.
        To create a category, click on the Plus!</string>
    <string name="tv_emptyNoteList">You don\'t have any notes. To create a note, click on the Plus!</string>

</resources>
