<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/et_categoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_hint_categoryName"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_marginStart="8dp"/>

    <Button
        android:id="@+id/btn_select_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_categoryIcon"
        android:textAllCaps="false"
        android:layout_marginStart="8dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:tag="city"
            android:drawableRight="@drawable/city" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:tag="housekeeping"
            android:drawableRight="@drawable/housekeeping" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:tag="budget"
            android:drawableRight="@drawable/budget" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:tag="holiday"
            android:drawableRight="@drawable/holiday" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:tag="shopping"
            android:drawableRight="@drawable/shopping" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:tag="reading"
            android:drawableRight="@drawable/reading" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:tag="doctor"
            android:drawableRight="@drawable/doctor" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:tag="spaghetti"
            android:drawableRight="@drawable/spaghetti" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:tag="wine"
            android:drawableRight="@drawable/wine" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:tag="christmas"
            android:drawableRight="@drawable/christmas" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:tag="dog"
            android:drawableRight="@drawable/dog" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:tag="cat"
            android:drawableRight="@drawable/cat" />

        <RadioButton
            android:id="@+id/radioButton13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:tag="parrot"
            android:drawableRight="@drawable/parrot" />
    </RadioGroup>

</LinearLayout>