<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/iv_category"
        android:layout_width="30dp"
        android:layout_height="32dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tv_categoryName"
        style="@style/CategoryNameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Название категории" />

</LinearLayout>