<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.categories.CategoriesActivity"
    tools:showIn="@layout/activity_categories">

    <TextView
        android:id="@+id/tv_emptyCategoryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:text="@string/tv_emptyCategoryList"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_categories"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>