<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.elena.mynotes.ui.notes.CategoryActivity">

    <item
        android:id="@+id/edit_category"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/sort_notes"
        android:icon="@drawable/ic_unsorted"
        android:title="@string/unsorted"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/delete_category"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom|withText" />

</menu>