...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="Creation date: " />

        <TextView
            android:id="@+id/tv_creationDate"
            style="@style/DateTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="TextView" />

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="Edited date: " />

        <TextView
            android:id="@+id/tv_editedDate"
            style="@style/DateTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="TextView" />
    </LinearLayout>
...
